MDEV-8079: Crash when running MariaDB Debug with InnoDB on Windows

Problem was that std::vector was allocated using calloc instead of
new, this caused vector constructor not being called and vector
metadata not initialized.